[gd_scene load_steps=5 format=3 uid="uid://b5peyeh7iwrxl"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_7qbsq"]
[ext_resource type="Texture2D" uid="uid://b8vaoxfve3v5b" path="res://assets/backgrounds/placeholder-bg.png" id="1_ko1ks"]
[ext_resource type="PackedScene" uid="uid://bqhs88q4rsl01" path="res://scenes/settings.tscn" id="2_bbcgn"]
[ext_resource type="PackedScene" uid="uid://bjrtnhm6q574e" path="res://scenes/bgm.tscn" id="2_tbost"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qbsq")

[node name="Bgm" parent="." instance=ExtResource("2_tbost")]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.310651, 6.65889e-05, 0.311603, 1)
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1075.0
texture = ExtResource("1_ko1ks")

[node name="Settings" parent="." instance=ExtResource("2_bbcgn")]
visible = false
offset_left = 347.0
offset_top = 508.0
offset_right = 664.0
offset_bottom = 942.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 561.0
offset_right = 347.0
offset_bottom = 1061.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
